removed evil m-dash

--- a/lib/_grid.scss
+++ b/lib/_grid.scss
@@ -62,7 +62,7 @@
 .col-lg-10,
 .col-lg-11,
 .col-lg-12 {
-  position: relative;-
+  position: relative;
   // Prevent columns from collapsing when empty
   min-height: 1px;
   // Inner gutter via padding
